clang-tools-extra/test/modularize/ProblemsDuplicate.modularize
# RUN: modularize %s -x c++ 2>&1 | FileCheck %s

Inputs/DuplicateHeader1.h
Inputs/DuplicateHeader2.h

# CHECK: error: 'TypeInt' defined at both {{.*}}{{[/\\]}}Inputs{{[/\\]}}DuplicateHeader1.h:2:13 and {{.*}}{{[/\\]}}Inputs{{[/\\]}}DuplicateHeader2.h:2:13
